Fix issues with elements not fitting in the with of the navigation bar

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,14 @@
 #parsingfail_dialog{display: none;}
 #dialog_holder {display: none;}
 
-#loading { display: none;margin: 0;padding:0;margin-top:5px;}
+#loading {
+	position: absolute;
+	top: 3px;
+	left: 2px;
+	display: none;
+	margin: 0;
+	padding: 0;
+}
 
 #fullcalendar {
 	position: relative;
@@ -294,6 +301,7 @@ button.category{margin:0 3px;}
 	margin-left: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
+	font-weight: normal;
 }
 
 #navigation-list #onedayview_radio {
@@ -332,16 +340,23 @@ button.category{margin:0 3px;}
 }
 
 #datecontrol_left {
+	width: 33px;
 	margin-top: 6px;
 	border-radius: 0;
 	border-left: 0;
 }
 
 #datecontrol_right {
+	width: 33px;
 	margin-top: 6px;
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
 	border-left: 0;
+}
+
+#navigation-list {
+	/* fix for scrollbar issues in app-navigation after expansion of datepicker */
+	overflow: initial !important;
 }
 
 #navigation-list #datecontrol_today {
